Modified manifest to v3 and fixed popup alignment

--- a/src/components/Todo/Todo.css
+++ b/src/components/Todo/Todo.css
@@ -3,7 +3,7 @@
     min-height: 200px;
 }
 
-form{
+.todo-form form{
     display: flex;
     align-items: center;
     flex-direction: row;
